# Robotics

./: elaborato1  sin_cos.m
MatLab cinematics/: cinematica diretta  cinematica_diretta.m  cinematica_diretta_esercizio.m
elaborato1/: my_robot.urdf  test_robot.gv
elaborato1/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
elaborato1/logs/elaboratoR1/: build.check.002.log.stderr  build.check.005.log.stderr  build.check.006.log.stderr  build.check.008.log.stderr  build.check.009.log.stderr  build.check.010.log.stderr  build.check.011.log.stderr  build.check.012.log.stderr  build.check.013.log.stderr  build.check.014.log.stderr  build.check.016.log.stderr  build.check.017.log.stderr  build.check.019.log.stderr  build.check.020.log.stderr  build.check.021.log.stderr  build.check.023.log.stderr  build.check.024.log.stderr  build.check.025.log.stderr  build.check.026.log.stderr  build.check.027.log.stderr  build.check.033.log.stderr  build.check.036.log.stderr  build.check.037.log.stderr  build.check.039.log.stderr  build.check.042.log.stderr  build.check.043.log.stderr  build.check.045.log.stderr  build.check.046.log.stderr  build.check.047.log.stderr  build.check.049.log.stderr  build.check.050.log.stderr  build.check.051.log.stderr  (+20 more)
elaborato1/src/: Elaborato Robotica R2 VR436823.tar.xz  README.txt  domande_elaborato.txt  moveit_script.sh  scada_project.tar.xz  script.sh
elaborato1/src/elaboratoR1_B/: CMakeLists.txt  instanode.cpp  package.xml  starting.sh
elaborato1/src/elaboratoR1_B/launch/: node.launch
elaborato1/src/scada_project/: CMakeLists.txt  controllo.cpp  main.cpp  package.xml  publisher.cpp
elaborato1/src/scada_project/cinematiche/: kinematics.py
(+572 files in other folders)
